[package]
name = "reddit-galery"
version = "0.1.0"
authors = ["WeaponMan <weaponman@centrum.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.17"}
wasm-bindgen = "0.2.67"
web-sys = "0.3"
wasm-logger = "0.2.0"
log = "0.4"
anyhow = "1.0"
serde = "1"
serde_derive = "1"